# ros_project_backups

bagfiles/: 2018-06-01-16-09-15.bag  subset_2018-06-01-16-09-45.bag
catakin_ws/devel/: .catkin  .rosinstall  setup.sh
catakin_ws/src/beginner_tutorials/: CMakeLists.txt
chessbot/devel/: .catkin  .rosinstall  setup.sh
chessbot/src/chessbot_r2/: CMakeLists.txt
example_ws/devel/: .catkin  .rosinstall  setup.sh
mybot_ws/devel/: .catkin  .rosinstall  setup.sh
mybot_ws/src/cougarbot_moveit_config/: .setup_assistant  package.xml
mybot_ws/src/handbase/: CMakeLists.txt  control.bash  controllers.yaml  package.xml
mybot_ws/src/my_actuator/: CMakeLists.txt  package.xml
mybot_ws/src/my_cougarbot/: CMakeLists.txt  package.xml
mybot_ws/src/my_sensor/: CMakeLists.txt  package.xml
mybot_ws/src/my_tortoisebot/: CMakeLists.txt
mybot_ws/src/robocon2019/: CMakeLists.txt  note  text_house.urdf.xacro
mybot_ws/src/robocon2019/config/: text_house_left_back_controllers.yaml  text_house_left_front_controllers.yaml  text_house_right_back_controllers.yaml  text_house_right_front_controllers.yaml
mybot_ws/src/robocon2019/launch/: MR2_bringup.launch  text_house_bringup.launch  text_model_bringup.launch
mybot_ws/src/robocon2019/model/: kinect_box.urdf.xacro  text_house.urdf.xacro  text_house_with_kinect.urdf.xacro  text_model.urdf.xacro
mybot_ws/src/robocon2019/scripts/: MR2_demo.py  follow.py  follower_color_filter.py  init_test_house_pose.py
mybot_ws/src/robocon2019/src/: MR1move.cpp  MR2_scan2point.cpp  MR2move.cpp
mybot_ws/src/robocon2019/world/: MR1area.world  MR2area.world  MRSway.world  ROBOCON2019_red.world
stockroombot_ws/: sb说明
stockroombot_ws/devel/: .catkin  .rosinstall  setup.sh
uno_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
wanderbot_ws/devel/: .catkin  .rosinstall  setup.sh
wpd_ws/devel/: .catkin  .rosinstall  setup.sh
y-robot_ws/devel/: .catkin  .rosinstall  setup.sh
y-robot_ws/src/: note
(+772 files in other folders)
